# cemu

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  cemu.desktop  main.py  old_requirements.txt  old_setup.py  pyproject.toml  requirements.sh  requirements.txt  setup.py
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  cd.yml  codeql-analysis.yml  irc-notify.yml  notify.yml  publish.yml
cemu/: __init__.py  __main__.py  arch.py  console.py  const.py  core.py  emulator.py  errors.py  exports.py  log.py  memory.py  parser.py  reil.py  settings.py  shortcuts.py  utils.py
cemu/arch/: __init__.py  arm.py  generic.py  mips.py  ppc.py  sparc.py  x86.py
cemu/cli/: repl.py
cemu/examples/: aarch64_execve_bin_sh.asm  arm_sys_exec_bin_sh.asm  mips_sys_exec_bin_sh.asm  sparc_sys_exec_bin_sh.asm  x86_32_sys_exec_bin_sh.asm  x86_32_sys_exec_bin_sh_null_free.asm  x86_64_read_flag_null_free.asm  x86_64_sys_exec_bin_sh.asm
cemu/plugins/: __init__.py  pyconsole.py  scratchboard.py
cemu/plugins/pyconsole/: console.py
cemu/styles/: default.qss
cemu/syscalls/: arm.csv  sparc.csv  x86.csv
cemu/syscalls/linux/: aarch64.csv
cemu/templates/: about.html  arm_sys_exec_bin_sh.asm  cemu.ini  mipsbe_sys_exec_bin_sh.asm  template.c  x86_32_sys_exec_bin_sh.asm
cemu/templates/linux/: template.asm
cemu/ui/: codeeditor.py  command.py  emulator.py  highlighter.py  log.py  main.py  mapping.py  memory.py  registers.py  scratchboard.py  utils.py
src/cemu/: __main__.py  const.py  core.py  emulator.py  exceptions.py  exports.py  log.py  memory.py  os.py  settings.py  shortcuts.py  utils.py
src/cemu/arch/: __init__.py  arm.py  mips.py  ppc.py  sparc.py  x86.py
src/cemu/cli/: repl.py
src/cemu/examples/: aarch64_sys_exec_bin_sh.asm  arm_nops.raw  arm_sys_exec_bin_sh.asm  mips_sys_exec_bin_sh.asm  sparc64_sys_exec_bin_sh.asm  x86_32_read_flag_null_free.asm  x86_32_sys_exec_bin_sh.asm  x86_64_sys_exec_bin_sh.asm  x86_nops.raw
src/cemu/plugins/: __init__.py  scratchboard.py
src/cemu/plugins/pyconsole/: __init__.py  console.py
src/cemu/syscalls/linux/: mips.csv  mips64.csv  x86-64.csv
src/cemu/ui/: codeeditor.py  command.py  highlighter.py  main.py  mapping.py  memory.py  registers.py  utils.py
templates/: arm_sys_exec_bin_sh.asm  mips_sys_exec_bin_sh.asm  sparc_nops.raw  sparc_sys_exec_bin_sh.asm  x86_32_read_flag_null_free.asm  x86_32_simple_operations_1.asm  x86_32_simple_operations_2.asm  x86_32_sys_exec_bin_sh_null_free.asm  x86_64_sys_exec_bin_sh_null_free.asm  x86_nops.raw
tests/: pytest.ini  requirements.txt  test_arch.py  test_basic.py  test_memory.py  test_utils.py
